tests/fail/call_wrong_nbr_args.dode

fn main() {
    return other(1,2);
}

fn other(a,b,c) {
    return a+b+c;
}
